Finished dot plot

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
         </div>
         <div id="visualization">
             <svg id="bar-chart"></svg>
-            <svg id="histogram"></svg>
+            <svg id="dot-plot"></svg>
         </div>
     </div>
     <script src="script.js"></script>
